--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -57,6 +57,7 @@ bind-key -T copy-mode-vi t send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
 
 # List of plugins
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'Morantron/tmux-fingers'
@@ -73,8 +74,24 @@ set -g @jump-key 'm'
 
 # https://github.com/tmux-plugins/vim-tmux-focus-events
 set -g focus-events on
+set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha
 
-source-file ~/.tmux/tmuxline.conf
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "left"
+set -g @catppuccin_window_middle_separator " "
+
+set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "session date_time"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
+
+set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.tmux/plugins/"
