--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Dotbase"]
-	path = Dotbase
-	url = https://github.com/chagel/Dotbase
+[submodule "dotbase"]
+	path = dotbase
+	url = https://github.com/chagel/dotbase
