Kitty window looks nicer without titlebar

--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -833,7 +833,7 @@ Window layout {{{
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-window_padding_width 0 5 0 5
+window_padding_width 5 10 5 10
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -876,7 +876,7 @@ window_padding_width 0 5 0 5
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-# hide_window_decorations no
+hide_window_decorations titlebar-only
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only and titlebar-and-corners can be used
@@ -1721,7 +1721,7 @@ OS specific tweaks {{{
 #: to use the background color of the currently active window and
 #: finally you can use an arbitrary color, such as #12af59 or red.
 
-macos_titlebar_color system
+macos_titlebar_color dark
 
 #: The color of the kitty window's titlebar on macOS. A value of
 #: system means to use the default system color, light or dark can
@@ -1781,7 +1781,7 @@ macos_titlebar_color system
 #: Use the macOS traditional full-screen transition, that is faster,
 #: but less pretty.
 
-# macos_show_window_title_in all
+# macos_show_window_title_in none
 
 #: Control where the window title is displayed on macOS. A value of
 #: window will show the title of the currently active window at the
